[gd_scene load_steps=9 format=3 uid="uid://blyechep67nqq"]

[ext_resource type="Script" uid="uid://ca7j5vtjx01w7" path="res://Scripts/UI/GameUiManager.gd" id="1_i1xt3"]
[ext_resource type="FontFile" uid="uid://cnol65dwh80k5" path="res://Fonts/Audiowide-Regular.ttf" id="2_l5pbw"]
[ext_resource type="FontFile" uid="uid://d2wc1u7ejmb4c" path="res://Fonts/Protomolecule.otf" id="3_amjep"]
[ext_resource type="Texture2D" uid="uid://n2n6ev26cn67" path="res://Sprites/wifi.png" id="4_3lkeg"]
[ext_resource type="Texture2D" uid="uid://btvulpjlfxddh" path="res://Sprites/arrow_left.png" id="5_3lkeg"]
[ext_resource type="Texture2D" uid="uid://2kw22jijnawg" path="res://Sprites/health_background.png" id="5_amjep"]
[ext_resource type="Texture2D" uid="uid://demlcfh46djhg" path="res://Sprites/health_fill.png" id="6_3lkeg"]
[ext_resource type="Texture2D" uid="uid://ebwnqyknbirl" path="res://Sprites/arrow_right.png" id="8_53k67"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_i1xt3")
demand_above_color = Color(0.1168, 0.73, 0.1168, 1)
demand_at_color = Color(0.786137, 0.738588, 0.0716179, 1)
demand_below_color = Color(0.811765, 0.164706, 0.160784, 1)
health_full_color = Color(0.117647, 0.729412, 0.117647, 1)
health_empty_color = Color(0.809854, 0.162906, 0.160937, 1)

[node name="DemandPanel" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.0
offset_right = 199.0
offset_bottom = 114.0
grow_horizontal = 2
theme_override_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="DemandPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="DemandPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="DemandPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_l5pbw")
theme_override_font_sizes/font_size = 42
text = "Demand"
vertical_alignment = 1
uppercase = true

[node name="Value" type="Label" parent="DemandPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_amjep")
theme_override_font_sizes/font_size = 60
text = "0/0"
vertical_alignment = 1

[node name="WifiIcon" type="Control" parent="DemandPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="DemandPanel/VBoxContainer/HBoxContainer/WifiIcon"]
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_3lkeg")

[node name="HBoxContainer2" type="HBoxContainer" parent="DemandPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ArrowsLeft" type="Control" parent="DemandPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Arrow1" type="TextureRect" parent="DemandPanel/VBoxContainer/HBoxContainer2/ArrowsLeft"]
modulate = Color(0.45, 0.108, 0.09, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_3lkeg")

[node name="Arrow2" type="TextureRect" parent="DemandPanel/VBoxContainer/HBoxContainer2/ArrowsLeft"]
modulate = Color(0.45, 0.108, 0.09, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_3lkeg")

[node name="Arrow3" type="TextureRect" parent="DemandPanel/VBoxContainer/HBoxContainer2/ArrowsLeft"]
modulate = Color(0.45, 0.108, 0.09, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = -40.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_3lkeg")

[node name="TextureProgressBar" type="TextureProgressBar" parent="DemandPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
step = 0.1
texture_under = ExtResource("5_amjep")
texture_progress = ExtResource("6_3lkeg")
tint_progress = Color(1, 0, 0, 1)

[node name="ArrowsRight" type="Control" parent="DemandPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Arrow1" type="TextureRect" parent="DemandPanel/VBoxContainer/HBoxContainer2/ArrowsRight"]
modulate = Color(0.09, 0.45, 0.09, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("8_53k67")

[node name="Arrow2" type="TextureRect" parent="DemandPanel/VBoxContainer/HBoxContainer2/ArrowsRight"]
modulate = Color(0.09, 0.45, 0.09, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("8_53k67")

[node name="Arrow3" type="TextureRect" parent="DemandPanel/VBoxContainer/HBoxContainer2/ArrowsRight"]
modulate = Color(0.09, 0.45, 0.09, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 20.0
grow_vertical = 2
texture = ExtResource("8_53k67")

[node name="NextOrbitPanel" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -149.0
offset_top = -90.0
offset_right = 149.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="NextOrbitPanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="NextOrbitPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_l5pbw")
theme_override_font_sizes/font_size = 28
text = "Next orbit at"
vertical_alignment = 1
uppercase = true

[node name="Value" type="Label" parent="NextOrbitPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_amjep")
theme_override_font_sizes/font_size = 40
text = "5"
vertical_alignment = 1

[node name="WifiIcon" type="Control" parent="NextOrbitPanel/HBoxContainer"]
custom_minimum_size = Vector2(38.4, 38.4)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="NextOrbitPanel/HBoxContainer/WifiIcon"]
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_3lkeg")
